[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformer-lens",
    "sae-lens",
    "torch",
    "transformers",
    "numpy",
    "requests",
    "openai",
    "openai-agents",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "huggingface-hub[xet]>=0.36.2",
]
